--- a/index.html
+++ b/index.html
@@ -3322,7 +3322,7 @@
                 document.getElementById('detail-date').textContent = dateStr;
                 document.getElementById('detail-title').textContent = ev.title;
                 document.getElementById('detail-desc').textContent = ev.description;
-                document.getElementById('detail-tags').innerHTML = ev.tags.map(t => `<span class="bg-slate-100 border border-slate-200 text-slate-600 px-2 py-1 rounded text-xs font-medium">#${t}</span>`).join('');
+                document.getElementById('detail-tags').innerHTML = ev.tags.map(t => `<span class="bg-slate-100 border border-slate-200 text-slate-600 px-2 py-1 rounded text-xs font-medium">${t}</span>`).join('');
                 document.getElementById('detail-ai-btn').onclick = () => { app.closeModal('detail-modal'); app.askAI(id); };
                 document.getElementById('detail-edit-btn').onclick = () => { app.closeModal('detail-modal'); app.openModal(id); };
                 document.getElementById('detail-modal').classList.remove('hidden');
